# steer-runtime

./: .gitignore  .mailmap  AGENTS.md  AGENTS_OVERVIEW.md  CHANGELOG.md  DESIGN.md  DPAY_Q2_2026_Quarterly_Report.md  KIRO_CLI_VS_UI.md  KIRO_UI_SETUP.md  MCP_SETUP.md  MIGRATION.md  Makefile  ORCHESTRATOR_DELEGATION_REVIEW.md  PROMPT_GUIDE.md  README.md  RELEASE_NOTES.md  VERSION  appium-mcp-development-context.md  create-distribution.sh  fix-orchestrators.sh  mcp-config-template.json  mkdocs.yml  setup-kiro-ide.ps1  setup-kiro.sh  setup-mcp-cli.sh  setup-ui.sh  setup.ps1  setup.sh  test-workspace-mcp.sh
.amazonq-templates/: 00-golden-rules.md  01-project-mappings.md  02-conventional-commits.md  10-java-backend.md  11-node-webapi.md  12-angular-ui.md  13-go-services.md  14-flutter-mobile.md  20-testing-standards.md  21-security-guidelines.md  22-architecture-patterns.md  30-ba-guidelines.md  31-qa-guidelines.md  32-ops-guidelines.md  33-pm-guidelines.md  40-guardrails.md  50-sdlc-workflow.md  51-pr-template.md  52-story-analysis.md  README.md
.cursor-templates/: 00-golden-rules.mdc  01-project-mappings.mdc  02-conventional-commits.mdc  10-java-backend.mdc  11-node-webapi.mdc  12-angular-ui.mdc  13-go-services.mdc  14-flutter-mobile.mdc  20-testing-standards.mdc  30-ba-guidelines.mdc  (+10 more)
evals/evaluator/: README.md  pyproject.toml
evals/evaluator/config/: default.yaml  fast.yaml
evals/evaluator/test_cases/compliance/: 01-sdlc-flow.json
evals/evaluator/test_cases/delegation/: 01-implement-backend.json
evals/evaluator/test_cases/quality/: 01-plan-completeness.json
(+3839 files in other folders)
