[project]
name = "forge-evaluator"
version = "0.1.0"
description = "Agent evaluation framework — delegation accuracy, output quality, and compliance scoring"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm-judge = [
    "boto3>=1.34",
]

[project.scripts]
forge-eval = "packages.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]
